# revelation-autoplay-piano

./: LICENSE  README.md  index.html  package.json  release_message.txt  vite.config.ts
.github/workflows/: main.yml
pages/config/: auto_config_background.html  auto_config_controller.css  auto_config_controller.html
pages/play_music/: play_music_controller.html  preview_music_controller.html
public/: config.html
public/config/: auto_config.html  auto_config_background.css  auto_config_background.html  auto_config_controller.html  manual_config.html
public/play_music/: play_music_background.css  play_music_background.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: inject_touch.rs  input.rs  input.rs.backup  main.rs  mouse.rs  piano.rs  util.rs
src/asset/scss/: base.scss  config.scss  container.scss  css_variable.scss  main.scss  play_music.scss  primary_button.scss  transition.scss
src/asset/scss/page/: auto_config_controller.scss  play_music_controller.scss  preview_music_controller.scss
src/component/button/: IconOnlyButton.vue  PianoKey.vue  PrimaryButton.vue  SidebarButton.vue
src/component/input/: PrimaryInput.vue
src/component/layout/: ContextMenu.vue  ContextMenuItem.vue  NavBar.vue  PrimaryDialog.vue  SideBar.vue
src/component/piano/: HorizontalPiano.vue  HorizontalPianoRoll.vue  MusicBeat.vue  MusicFile.vue  MusicFileEntry.vue  MusicNote.vue  PianoConfigDetail.vue  PianoKey.vue
src/router/: index.ts
src/store/: layout.store.ts
src/type/: index.d.ts
src/util/: config_piano_key.ts  config_window.ts  converter.ts  music.ts  piano.ts  register_global_shortcut.ts
src/util/config/: auto_config.ts  auto_config_background.ts  auto_config_controller.ts  config.ts  manual_config.ts
src/util/locale/: en_US.ts  index.ts  vi_VN.ts
src/util/play_music/: index.ts  play_music_window_script.ts  preview_music_window_script.ts
src/view/: 404View.vue  AddMusicView.vue  ConfigView.vue  HomeView.vue  ListMusicView.vue  SettingView.vue
